--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header {
   padding-top: 30px;
   min-height: 70px;
   text-align: center;
+  border-radius: 0px 0px 10px 10px;
 }
 .project-grid {
   display: grid;
@@ -29,7 +30,7 @@ header {
 }
 .project-card {
   background: white;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
