style fot the footer

--- a/style.css
+++ b/style.css
@@ -90,3 +90,15 @@ header {
 .project-links a:hover {
   background-color: #555;
 }
+
+/* copyright section */
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  text-align: center;
+  height: 30px;
+  width: 100%;
+  color: white;
+  background-color: #333;
+}
