--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   padding: 20px;
 }
 header {
-  background: #333;
+  background: #041944;
   color: #fff;
   padding-top: 30px;
   min-height: 70px;
@@ -81,14 +81,14 @@ header {
 }
 .project-links a {
   text-decoration: none;
-  background-color: #333;
+  background-color: #041944;
   color: white;
   padding: 8px 15px;
   border-radius: 5px;
   transition: background-color 0.3s;
 }
 .project-links a:hover {
-  background-color: #555;
+  background-color: #270468;
 }
 
 /* copyright section */
@@ -101,4 +101,17 @@ footer {
   width: 100%;
   color: white;
   background-color: #333;
+}
+
+/* responsive design */
+
+@media screen and (max-width: 768px) {
+  .project-grid {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 480px) {
+  .project-card {
+    width: 100%;
+  }
 }
