--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ header {
   min-height: 70px;
   text-align: center;
   border-radius: 0px 0px 10px 10px;
+  border-style: solid;
+  border-color: #081122;
 }
 .project-grid {
   display: grid;
@@ -32,7 +34,7 @@ header {
   background: white;
   border-radius: 10px;
   padding: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 2px rgba(0, 0, 0, 0.4);
   transition: transform 0.3s ease;
   cursor: pointer;
 }
