--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header {
 
 footer {
   position: absolute;
-  bottom: 0px;
+  bottom: auto;
   text-align: center;
   height: 30px;
   width: 100%;
