--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,14 @@ header {
   border-style: solid;
   border-color: #081122;
 }
+#can {
+  position: absolute;
+  top: 0px;
+  right: 230px;
+  width: 90px;
+  height: 100px;
+  cursor: pointer;
+}
 .project-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
