--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   background-color: #f4f4f4;
+  cursor: default;
 }
 .container {
   width: 80%;
@@ -32,7 +33,6 @@ header {
   right: 230px;
   width: 90px;
   height: 100px;
-  cursor: pointer;
 }
 .project-grid {
   display: grid;
