--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,7 @@ footer {
 .wip-project {
   background: white;
   border-radius: 10px;
+  margin-bottom: 20px;
   padding: 20px;
   box-shadow: 0 5px 2px rgba(0, 0, 0, 0.4);
   transition: transform 0.3s ease;
